# calc-scesi

./: .rustc_info.json  Cargo.toml  README.md  main
DEBIAN/: .control.swp
calc/: Cargo.toml
calc/src/: main  main.rs
release/: calc.d
release/.fingerprint/calc-17eb7921b3232d53/: bin-calc  bin-calc.json
